--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Jackson Data-bind dependency for conversion between JSON and Java Object -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.0</version>
+        </dependency>
 
 
     </dependencies>
