Day08: Ser- De-Serialization Practice

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,6 +1,12 @@
-database.url=jdbc:oracle:thin:@35.170.61.191:1521:XE
-database.username=hr
-database.password=hr
+#HR Oracle Rest Data Service generated
+#Rest API information
+ords.baseURL=http://35.170.61.191:1000
+ords.basePath=/ords/hr
+
+#HR Oracle Database Connection INFO
+hr.database.url=jdbc:oracle:thin:@35.170.61.191:1521:XE
+hr.database.username=hr
+hr.database.password=hr
 
 spartan.database.url=jdbc:oracle:thin:@35.170.61.191:1521:XE
 spartan.database.username=SP
